--- a/windows/coda/AppxManifest.xml.in
+++ b/windows/coda/AppxManifest.xml.in
@@ -18,7 +18,7 @@
         <rescap:Capability Name="runFullTrust"/>
     </Capabilities>
     <Applications>
-        <Application Id="CODA" Executable="Collabora Office.exe" EntryPoint="Windows.FullTrustApplication">
+        <Application Id="CODA" Executable="program/Collabora Office.exe" EntryPoint="Windows.FullTrustApplication">
             <uap:VisualElements DisplayName="Collabora Office Desktop" Description="sofficeUapDescription" Square150x150Logo="Assets/Square150x150Logo.png" Square44x44Logo="Assets/Square44x44Logo.png" BackgroundColor="white"/>
         </Application>
     </Applications>
