--- a/windows/coda/PackagingLayout.xml.in
+++ b/windows/coda/PackagingLayout.xml.in
@@ -6,6 +6,7 @@
                 <File DestinationPath="**" SourcePath="%FILES/**"/>
                 <File ExcludePath="%FILES/program/bootstrap.ini"/>
                 <File ExcludePath="%FILES/**/*.exe"/>
+                <File IncludePath="%FILES/program/Collabora Office.exe" />
                 <File ExcludePath="%FILES/program/*.bin"/>
                 <File DestinationPath="program/bootstrap.ini" SourcePath="%BOOTSTRAP"/>
                 <File DestinationPath="Assets/*" SourcePath="%ASSETS/*"/>
