CODA-Q: Honor --disable-debug => -DNDEBUG
Signed-off-by: Stephan Bergmann <stephan.bergmann@collabora.com>
Change-Id: I2e66742a04121bdf0989ee6eb9903ad7e6cf0e85

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -12,6 +12,10 @@ AM_CPPFLAGS = -pthread \
               ${warning_flags} \
               ${include_paths}
 
+if !ENABLE_DEBUG
+AM_CPPFLAGS += -DNDEBUG
+endif
+
 AM_LDFLAGS = -pthread ${QT6_LIBS} -ldl $(ZSTD_LIBS) ${PNG_LIBS} -lPocoZip
 
 # Android's CMakefile list re-worked:
