case sensible filesystem fix
Signed-off-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Change-Id: Iebd4397f55145a0fe2db8b71859d6ee6c93ea2d6

--- a/windows/coda/CODA/CODA.rc
+++ b/windows/coda/CODA/CODA.rc
@@ -1,6 +1,6 @@
 //Microsoft Visual C++ generated resource script.
 //
-#include "resource.h"
+#include "Resource.h"
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENU)
 LANGUAGE 9, 1
