CODA-M: Set the window icon based on what kind of file is currently open.
Uses document/spreadsheet/presentation/drawing icons to show the current document
type in the window icon.
Unfortunately the AppKit tabs we are using don't support showing any icons
but the window does so do that based on the current file's document type.
Generate icon png files from the branded svg files during build.
Use these png icons depending which type of document is currently
focused in the window (document, spreadsheet, presentation, or drawing).

Signed-off-by: Jeremy Whiting <jeremy.whiting@collabora.com>
Change-Id: I15f89ed1617f2b92179d601edb80ecbf8d6713fd

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ coolwsd.spec
 coolwsd.xml
 aclocal.m4
 autom4te.cache
+coda.xcarchive
 config.h
 config_unused.h
 config_unused.h.in
@@ -46,6 +47,7 @@ common/support-public-key.hpp
 compile_commands.json
 **/gdb.txt
 macos/coolwsd/gmake-wrapper.sh
+macos/coda/coda/Assets.xcassets
 
 # Test stuff
 systemplate
