Add Galician (gl) translation
Translation percentage went up from 28.5% to 96% for Online strings
in the past few weeks.

Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: I16cba26b16b82b1c5fd8bc76305caa4bc0f28e59

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -79,7 +79,7 @@ coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp $(BUILT_SOURCES) $(cma
 ### --- Qt translations integration begin ---
 
 # List of translation languages
-LANGS = ar ca cs cy da de el es eu fi fr ga he hr hu hy id is it ja kk ko nl pl pt pt_BR ro ru sk sl sq sv tr uk zh_CN zh_TW
+LANGS = ar ca cs cy da de el es eu fi fr ga gl he hr hu hy id is it ja kk ko nl pl pt pt_BR ro ru sk sl sq sv tr uk zh_CN zh_TW
 
 # Translation source (.ts) and compiled (.qm) files
 TS_FILES = $(addprefix translations/coda_,$(addsuffix .ts,$(LANGS)))
