CODA-Q: Fix makefile warning
CLEANFILES is already defined

Signed-off-by: Hubert Figuière <hub@collabora.com>
Change-Id: Ia5dec5a4bd9f8f0174d75ccf53c32e756be7ee73

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -106,6 +106,6 @@ translations_DATA = $(QM_FILES)
 
 # Distribute sources and clean up generated files
 EXTRA_DIST = $(TS_FILES)
-CLEANFILES = $(QM_FILES)
+CLEANFILES += $(QM_FILES)
 
 ### --- Qt translations integration end ---
