implement the Log-common.cpp/Log-poco.cpp split in wasm project
Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: I5e952b348c49bf9d4bf6cfcad2ba64f09cd34211

--- a/wasm/Makefile.am
+++ b/wasm/Makefile.am
@@ -37,7 +37,8 @@ online_SOURCES = \
 	../common/FileUtil.cpp \
 	../common/FileUtil-unix.cpp \
 	../common/CommandControl.cpp \
-	../common/Log.cpp \
+	../common/Log-common.cpp \
+	../common/Log-poco.cpp \
 	../common/TraceEvent.cpp \
 	../common/Protocol.cpp \
 	../common/RegexUtil.cpp \
