Use the better blank documents in CODA-W, too
Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: Id0480a0f40fe6a372a914d0c835dbdaef7308dd4

--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -262,7 +262,7 @@
         del $(OutDir)..\..\Release\program\xsltdlglo.dll
         del $(OutDir)..\..\Release\program\xsltfilterlo.dll
         del $(OutDir)..\..\Release\program\xstor.dll
-        xcopy ..\templates $(OutDir)..\templates\ /s /f /y
+        xcopy ..\..\..\browser\templates $(OutDir)..\templates\ /s /f /y
       </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
