Don't accidentally exclude *.components files in the xcopy.excludes file
The line ".com" matches also *.components files, like the
Lightproof.components files in some of the dictionaries.

Instead delete the *.com executables explicitly in the PostBuild step.

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I3fca8a49c82b1fb6339eaa674cb40fb49ac188df

--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -170,6 +170,7 @@
         xcopy ..\..\..\browser\dist\src\layer\tile\CanvasTileUtils.js $(OutDir)..\cool\src\layer\tile\ /f /y
         xcopy ..\..\..\browser\dist\src\layer\tile\TileWorker.js $(OutDir)..\cool\src\layer\tile\ /f /y
         xcopy $(LO_PATH) $(OutDir)..\ /s /f /y /exclude:..\xcopy.excludes
+        del $(OutDir)*.com
         del $(OutDir)..\..\Release\program\avmedialo.dll
         del $(OutDir)..\..\Release\program\basctllo.dll
         del $(OutDir)..\..\Release\program\basprovlo.dll
