CODA-Q flatpak: Rename the app to com.collaboraoffice.Office
Update the appstream and flatpak manifest
Change the D-Bus names
Rename the icons

Signed-off-by: Hubert Figuière <hub@collabora.com>
Change-Id: I0d1359a4085e1ecd56340766c4046353c4739484

--- a/qt/com.collaboraoffice.Office.desktop
+++ b/qt/com.collaboraoffice.Office.desktop
@@ -19,7 +19,7 @@
 Version=1.5
 Terminal=false
 NoDisplay=false
-Icon=com.collabora.Office.startcenter
+Icon=com.collaboraoffice.Office.startcenter
 Type=Application
 Categories=Office;X-Red-Hat-Base;X-SuSE-Core-Office;
 Exec=coda-qt %F
