CODA-M: tools for merging back translations of the storyboard
Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: Icdbae14966576069fb8bae2a9957ceeada4486f6

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,9 @@ build-samples:
 
 if ENABLE_MOBILEAPP
 
+if ENABLE_MACOS
+SUBDIRS = macos browser
+else
 if ENABLE_QTAPP
 SUBDIRS = qt browser
 else
@@ -23,6 +26,7 @@ SUBDIRS = wasm browser
 else !ENABLE_WASM
 SUBDIRS = browser
 endif !ENABLE_WASM
+endif
 endif
 
 else
