CODA-Q: Add recent documents tracking with table UI
Implement recent documents functionality for CODA-Q. This feature
tracks files when they are opened or saved, allowing users to quickly
access recently opened or edited files through an elegant table-based
interface in the backstage view.

The feature automatically adds files to the recent list when:
- Opening files (debug: including via command line: ./coda-qt <PATH>)
- Saving files
- Using Save As

Browser side:
- Add table-based recent documents UI with Name and Modified Date columns
- Implement document type icons (writer, calc, impress, draw) with hover effects
- Add responsive styling with text ellipsis for long paths/filenames
- Include empty state handling with fallback message
- Format timestamps as YYYY/MM/DD at HH:MM:SS for readability

Qt side:
- Create RecentDocuments class for persistent storage using QSettings
  - Storage location: ~/.config/Collabora/CODA-RecentDocuments.conf
  - Stores up to 15 documents per document type (Writer/Calc/Impress)
  - Documents are organized by type in separate groups
- Move RecentDocuments implementation to separate file to reduce qt file size
- Add GETRECENTDOCS message handler to bridge frontend requests
  - Returns JSON array with uri, name, timestamp, and doctype fields
- Integrate tracking with document loading and save operations
- Support opening recent documents via 'newdoc file=' command

Signed-off-by: codewithvk <vivek.javiya@collabora.com>
Change-Id: If2c4d6b235da966b7188c31e1111606da3fec676

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -74,7 +74,7 @@ DBusService.moc.cpp: DBusService.hpp
 
 CLEANFILES = $(BUILT_SOURCES)
 
-coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp $(BUILT_SOURCES) $(cmake_list)
+coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp RecentDocuments.cpp $(BUILT_SOURCES) $(cmake_list)
 
 metainfodir = $(datadir)/metainfo
 metainfo_DATA = com.collaboraoffice.Office.metainfo.xml
