--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -166,7 +166,7 @@
   <ItemDefinitionGroup>
     <PostBuildEvent>
       <Command>
-        robocopy ..\..\..\browser\dist $(OutDir)..\cool *.* /E /XF debug.html framed.doc.html framed.html load.doc.html multidocs.html tsconfig.tsbuildinfo /XD src
+        robocopy ..\..\..\browser\dist $(OutDir)..\cool *.* /E /XF debug.html framed.doc.html framed.html load.doc.html multidocs.html tsconfig.tsbuildinfo l10n-all.js wasm.html /XD src
         xcopy ..\..\..\browser\dist\src\layer\tile\CanvasTileUtils.js $(OutDir)..\cool\src\layer\tile\ /f /y
         xcopy ..\..\..\browser\dist\src\layer\tile\TileWorker.js $(OutDir)..\cool\src\layer\tile\ /f /y
         xcopy $(LO_PATH) $(OutDir)..\ /s /f /y /exclude:..\xcopy.excludes
