CODA-W: remove unnecessary .exe files from $(OutDir)
These .exe files appeared after we removed the .exe filter
from xcopy excludelist, because we needed python.exe.

And we do not need to remove these files and other files
in PackagingLayout.xml.in, because they are not there to
begin with, when it's time for packaging.

Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: I607737aa9c0990ffd05e0b3336f8fc1f29cab8e7

--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -171,6 +171,25 @@
         xcopy ..\..\..\browser\dist\src\layer\tile\TileWorker.js $(OutDir)..\cool\src\layer\tile\ /f /y
         xcopy $(LO_PATH) $(OutDir)..\ /s /f /y /exclude:..\xcopy.excludes
         del $(OutDir)*.com
+        del $(OutDir)..\..\Release\program\gengal.exe
+        del $(OutDir)..\..\Release\program\odbcconfig.exe
+        del $(OutDir)..\..\Release\program\quickstart.exe
+        del $(OutDir)..\..\Release\program\regview.exe
+        del $(OutDir)..\..\Release\program\sbase.exe
+        del $(OutDir)..\..\Release\program\scalc.exe
+        del $(OutDir)..\..\Release\program\sdraw.exe
+        del $(OutDir)..\..\Release\program\senddoc.exe
+        del $(OutDir)..\..\Release\program\simpress.exe
+        del $(OutDir)..\..\Release\program\smath.exe
+        del $(OutDir)..\..\Release\program\soffice.exe
+        del $(OutDir)..\..\Release\program\soffice_safe.exe
+        del $(OutDir)..\..\Release\program\spsupp_helper.exe
+        del $(OutDir)..\..\Release\program\sweb.exe
+        del $(OutDir)..\..\Release\program\swriter.exe
+        del $(OutDir)..\..\Release\program\twain32shim.exe
+        del $(OutDir)..\..\Release\program\uno.exe
+        del $(OutDir)..\..\Release\program\unoinfo.exe
+        del $(OutDir)..\..\Release\program\unopkg.exe
         del $(OutDir)..\..\Release\program\avmedialo.dll
         del $(OutDir)..\..\Release\program\basctllo.dll
         del $(OutDir)..\..\Release\program\basprovlo.dll
