CODA-Q flatpak: Added script to add a release
This is meant to be called before tagging to add to the appstream file

Signed-off-by: Hubert Figuière <hub@collabora.com>
Change-Id: I1e0c870eee61832af44acf133ab1a959e0f23512

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -103,6 +103,8 @@ nobase_dist_icons_DATA = \
 	hicolor/512x512/apps/com.collaboraoffice.Office.startcenter.png \
 	hicolor/scalable/apps/com.collaboraoffice.Office.startcenter.svg
 
+EXTRA_DIST = tools/add-release.py
+
 ### --- Qt translations integration begin ---
 
 # List of translation languages
@@ -133,7 +135,7 @@ translationsdir = $(datadir)/coda-qt/translations
 translations_DATA = $(QM_FILES)
 
 # Distribute sources and clean up generated files
-EXTRA_DIST = $(TS_FILES) run-from-build.in
+EXTRA_DIST += $(TS_FILES) run-from-build.in
 CLEANFILES += $(QM_FILES) run-from-build
 
 ### --- Qt translations integration end ---
