--- a/windows/coda/config.props.in
+++ b/windows/coda/config.props.in
@@ -4,5 +4,6 @@
     <LibraryPath>@POCOLIB_WINDOWS@;@ZSTDLIB_WINDOWS@;@LIBPNG_LIBS_WINDOWS@;@ZLIB_LIBS_WINDOWS@;$(LibraryPath)</LibraryPath>
     <LO_PATH>@LO_PATH@</LO_PATH>
     <APP_NAME>@APP_NAME@</APP_NAME>
+    <APP_VENDOR>@VENDOR@</APP_VENDOR>
   </PropertyGroup>
 </Project>
