Implement recent documents in CODA-W
Also, set the AppUserModelId of the process if not set by the system
(in an app installed from the Microsoft Store).

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I90dbe8bd32783139d0552b517bd06d8869a49c0c

--- a/windows/coda/CODA/CODA.vcxproj.filters
+++ b/windows/coda/CODA/CODA.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="..\..\..\common\Protocol.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\common\RecentFiles.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\common\RegexUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
