--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -296,6 +296,7 @@
     <ClCompile Include="..\..\..\common\Log-windows.cpp" />
     <ClCompile Include="..\..\..\common\MobileApp.cpp" />
     <ClCompile Include="..\..\..\common\Protocol.cpp" />
+    <ClCompile Include="..\..\..\common\RecentFiles.cpp" />
     <ClCompile Include="..\..\..\common\RegexUtil.cpp" />
     <ClCompile Include="..\..\..\common\Session.cpp" />
     <ClCompile Include="..\..\..\common\SigUtil-mobile.cpp" />
