CODA-Q: A better way to find data files
This is based on
<https://build.opensuse.org/projects/home:fstrba/packages/collaboraoffice-desktop/files/0001-Standalone-coda-qt.patch>
by Fridrich Štrba <fridrich.strba@bluewin.ch>.

For one, finding the data files should either

* for a scenario where a developer runs the built qt/coda-qt directly from the
  source tree: use the data files from the source tree (though this will still
  not support out-of-tree builds); or

* for a scenario where a coda-qt installed into the system (via `make install`)
  is run: use the data files installed into the system (i.e., COOLWSD_DATADIR).

And for another, finding the LICENSE.html in the separate collaboraoffice
installation should go via LO_PATH, instead of via some relative path.

Signed-off-by: Stephan Bergmann <stephan.bergmann@collabora.com>
Change-Id: Ifd01d46229cd90f68f3d6eacb47cd751a08d7310

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -6,7 +6,7 @@ warning_flags = -Wall -Werror -Wno-parentheses -Wno-sign-compare -Wno-unused-var
 define_flags = -DMOBILEAPP=1
 
 AM_CPPFLAGS = -pthread \
-              -DTOPSRCDIR='"'$(realpath ${top_srcdir})'"' \
+              -DCOOLWSD_DATADIR='"'@COOLWSD_DATADIR@'"' \
               -DQTAPP \
               ${define_flags} \
               ${warning_flags} \
