Allow running from out-of-tree build
Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>
Change-Id: Ifc050bff24ada2bd9b70997d11156e4fd23b5b19

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -128,7 +128,7 @@ translationsdir = $(datadir)/coda-qt/translations
 translations_DATA = $(QM_FILES)
 
 # Distribute sources and clean up generated files
-EXTRA_DIST = $(TS_FILES)
-CLEANFILES += $(QM_FILES)
+EXTRA_DIST = $(TS_FILES) run-from-build.in
+CLEANFILES += $(QM_FILES) run-from-build
 
 ### --- Qt translations integration end ---
