Fix out-of-tree build
Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>
Change-Id: Id10d1a8584115b442a55399264524eaf8d66e5ad

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -110,6 +110,7 @@ QM_FILES = $(TS_FILES:.ts=.qm)
 
 # Rule: generate .qm from .ts
 %.qm: %.ts
+	mkdir -p $(dir $@)
 	@$(LRELEASE) $< -qm $@
 
 # Update .ts files from source code
