CODA-Q: Migrate recent documents to common/RecentFiles
- Replace qt/RecentDocuments with common/RecentFiles
- Centralize cross-platform recent file handling
- Remove doctype filtering in File tab backstage view
- Show recent files for all document types always

Signed-off-by: codewithvk <vivek.javiya@collabora.com>
Change-Id: I0ab0bb31c95c5c5a133a57f9430a1b08e9927aa5

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -44,6 +44,7 @@ cmake_list= \
             ../common/Util-mobile.cpp \
             ../common/Util-unix.cpp \
             ../common/Uri.cpp \
+            ../common/RecentFiles.cpp \
             ../kit/ChildSession.cpp \
             ../kit/DeltaSimd.c \
             ../kit/Kit.cpp \
@@ -79,7 +80,7 @@ if X86
 coda_qt_CXXFLAGS += -mno-direct-extern-access
 endif
 
-coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp RecentDocuments.cpp $(BUILT_SOURCES) $(cmake_list)
+coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp $(BUILT_SOURCES) $(cmake_list)
 
 metainfodir = $(datadir)/metainfo
 metainfo_DATA = com.collaboraoffice.Office.metainfo.xml
