Adapt CODA-Q to building with Clang
...which doesn't know -mno-direct-extern-access.  (It has a corresponding
-fno-direct-access-external-data, but that should be enabled by default,
anyway.)

Signed-off-by: Stephan Bergmann <stephan.bergmann@collabora.com>
Change-Id: I67385f4e510725dbe757d49d45c412f7a49d5923

--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -77,7 +77,9 @@ CLEANFILES = $(BUILT_SOURCES)
 
 coda_qt_CXXFLAGS = $(AM_CXXFLAGS)
 if X86
+if !CXX_CLANG
 coda_qt_CXXFLAGS += -mno-direct-extern-access
+endif
 endif
 
 coda_qt_SOURCES = coda-qt.cpp WebView.cpp DBusService.cpp $(BUILT_SOURCES) $(cmake_list)
