Include SettingsStorage in the CODA-W project
(Not used yet.)

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: Ic6eeb2ec4612b50ae810b2fb9ca538b8c537a22c

--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -299,6 +299,7 @@
     <ClCompile Include="..\..\..\common\RecentFiles.cpp" />
     <ClCompile Include="..\..\..\common\RegexUtil.cpp" />
     <ClCompile Include="..\..\..\common\Session.cpp" />
+    <ClCompile Include="..\..\..\common\SettingsStorage.cpp" />
     <ClCompile Include="..\..\..\common\SigUtil-mobile.cpp" />
     <ClCompile Include="..\..\..\common\Simd.cpp" />
     <ClCompile Include="..\..\..\common\SpookyV2.cpp" />
