--- a/windows/coda/CODA/CODA.vcxproj.filters
+++ b/windows/coda/CODA/CODA.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="..\..\..\common\Session.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\common\SettingsStorage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\common\SigUtil-mobile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
