--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ compile_commands.json
 **/gdb.txt
 macos/coolwsd/gmake-wrapper.sh
 macos/coda/coda/Assets.xcassets
+/qt/run-from-build
 
 # Test stuff
 systemplate
