Use coolkitconfig.xcu in CODA-W, too
Copy it to the app installation folder and add it to
CONFIGURATION_LAYERS.

As such I am not sure whether using it will have any effect.

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I75368d5b035ec01d6b4ac58363ff64f63c8b6eb0

--- a/windows/coda/CODA/CODA.vcxproj
+++ b/windows/coda/CODA/CODA.vcxproj
@@ -166,6 +166,7 @@
   <ItemDefinitionGroup>
     <PostBuildEvent>
       <Command>
+        copy ..\..\..\coolkitconfig.xcu $(OutDir)..
         robocopy ..\..\..\browser\dist $(OutDir)..\cool *.* /E /XF debug.html framed.doc.html framed.html load.doc.html multidocs.html tsconfig.tsbuildinfo l10n-all.js wasm.html /XD src
         xcopy ..\..\..\browser\dist\src\layer\tile\CanvasTileUtils.js $(OutDir)..\cool\src\layer\tile\ /f /y
         xcopy ..\..\..\browser\dist\src\layer\tile\TileWorker.js $(OutDir)..\cool\src\layer\tile\ /f /y
