Define ENABLE_DEBUG based on --enable-debug as 0 or 1 for CODA-W, too
Previously we used to not define it at all.

As a consequence, have to add a dummy setDisabledAreas().

We still use a separate windows/coda/config.h for CODA-W but should
probably start using just the one in the top level, like for
CODA-M. But one step at a time.

Signed-off-by: Tor Lillqvist <tml@collabora.com>
Change-Id: I4c6aeee2cf303a1a3f073120fed77272dd802471

--- a/windows/coda/config.h.in
+++ b/windows/coda/config.h.in
@@ -47,7 +47,7 @@
 
 /* Whether to compile in some extra debugging support code and disable some
    security pieces */
-#undef ENABLE_DEBUG
+#define ENABLE_DEBUG @ENABLE_DEBUG_0_OR_1@
 
 /* Whether to compile and enable feature locking */
 #undef ENABLE_FEATURE_LOCK
@@ -143,7 +143,7 @@
 #undef MACOS
 
 /* Makes config variables conditionally static, only in non-debug builds, to allow for overriding them in unit-tests. */
-#ifdef ENABLE_DEBUG
+#if ENABLE_DEBUG
 #define CONFIG_STATIC
 #else
 #define CONFIG_STATIC static
