--- a/macos/coda/coda.xcodeproj/xcshareddata/xcschemes/coda.xcscheme
+++ b/macos/coda/coda.xcodeproj/xcshareddata/xcschemes/coda.xcscheme
@@ -30,7 +30,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:coda.xctestplan"
+            reference = "container:TestPlan.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
