--- a/configure.ac
+++ b/configure.ac
@@ -1621,7 +1621,7 @@ AS_IF([test `uname -s` = "Linux" -o `uname -s` = "FreeBSD" -o `uname -s` = "Darw
        fi
 
        if test "$enable_cypress" = "yes"; then
-           AC_PATH_PROGS(CHROME, chromium chromium-browser chrome google-chrome brave, no)
+           AC_PATH_PROGS(CHROME, chromium chromium-browser chrome google-chrome google-chrome-stable brave, no)
            if test "$CHROME" = "no"; then
                AC_MSG_ERROR([chrome or chromium is required to run the JS tests, but not installed])
            fi
