feat(iOS): add Quick Look provider
Quick Look is iOS' preview mechanism. There's a strict memory limit,
which means we can't load LOKit to render or convert documents, so we
previously haven't provided a quick look interface at all.

Nevertheless, Quick Look is required for some apps to be able to open
documents. For example, the default iOS calendar doesn't let you open
attachments to events unless there is a quick look provider for them.
Therefore, we can provide a "Fake Quick Look" provider - really just
a CTA to use our app to view the document - which has the function of
showing up in these apps and letting you tap the share/open in buttons.

iOS already provides Quick Look for the Microsoft and OOXML formats as
part of its system formats. Therefore, we only need to register this for
formats that aren't provided by the system.

Signed-off-by: Skyler Grey <skyler.grey@collabora.com>
Change-Id: I79f06c49b2ed541d21ae9855e23620b86a6a6964

--- a/ios/ExportOptions/cpci.plist
+++ b/ios/ExportOptions/cpci.plist
@@ -10,6 +10,8 @@
   <dict>
     <key>com.collabora.office.Mobile</key>
     <string>Browserstack distribution</string>
+    <key>com.collabora.office.Mobile.FakeQuickLook</key>
+    <string>Browserstack fakequicklook</string>
   </dict>
 </dict>
 </plist>
