Guard COOLWSD_CONFIGDIR, COOLWSD_LOGLEVEL, NUM_PRESPAWN_CHILDREN in config.h.in
Wrap these macros with #ifndef guards so that platform-specific build
systems (e.g. Android CMake) can override them on the command line
without triggering -Wmacro-redefined warnings.

Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: I7b2a4e1f3c8d5a9062e4f7b1c3d8a5e2f6b9c4d0

--- a/config.h.in
+++ b/config.h.in
@@ -18,10 +18,14 @@
 #undef COOLWSD_BUILDCONFIG
 
 /* Directory that contains configuration of coolwsd */
+#ifndef COOLWSD_CONFIGDIR
 #undef COOLWSD_CONFIGDIR
+#endif
 
 /* Default coolwsd loglevel */
+#ifndef COOLWSD_LOGLEVEL
 #undef COOLWSD_LOGLEVEL
+#endif
 
 /* Default location of coolwsd log file */
 #undef COOLWSD_LOGFILE
@@ -36,7 +40,9 @@
 #undef COOL_USER_ID
 
 /* Default number of pre-spawn children */
+#ifndef NUM_PRESPAWN_CHILDREN
 #undef NUM_PRESPAWN_CHILDREN
+#endif
 
 /* Absolute path to the top-level source directory */
 #undef DEBUG_ABSSRCDIR
