cool#13988 redline render mode: add a new TooltipAnchorSection
Hover the mouse over a redline text portion, a tooltip appears, but it's
not easy to match the relevant piece of text on the left & right hand
side.

We a form of highlighting for content controls: a polygon around the
edge of the possibly multiline content.

Provide something similar here: if the tooltip is for a redline, then
highlight the insertion or the deletion together with showing the
tooltip.

For now, have a static color for the polygon and only show it on the
right hand side.

Signed-off-by: Miklos Vajna <vmiklos@collabora.com>
Change-Id: I8430bcae318e473492bfabb9aaa06a4ee39244c1

--- a/browser/Makefile.am
+++ b/browser/Makefile.am
@@ -373,6 +373,7 @@ COOL_JS_LST =\
 	src/canvas/sections/DiagramButtonSection.ts \
 	src/canvas/sections/ContentControlDropdownSubSection.ts \
 	src/canvas/sections/ContentControlSection.ts \
+	src/canvas/sections/TooltipAnchorSection.ts \
 	src/layer/marker/ProgressOverlay.js \
 	src/layer/marker/TextInput.js \
 	src/layer/marker/A11yTextInput.js \
