a11y: refactor button type utilities and enhance ARIA attribute handling
- added Util.ButtonType to detect the type of uno button
- move the button type detection logic in Util.ButtonType
- add new logic to detect the button type for overflow group - handles both uno buttons and overflow group uno buttons

Change-Id: Ib4e8352c55fffee0c3f83d7d8e0e613c239d69ba
Signed-off-by: Parth Raiyani <parth.raiyani@collabora.com>

--- a/browser/Makefile.am
+++ b/browser/Makefile.am
@@ -471,6 +471,7 @@ COOL_JS_LST =\
 	src/control/jsdialog/Definitions.DialogModification.ts \
 	src/control/jsdialog/Definitions.WindowId.ts \
 	src/control/jsdialog/Util.Accessibility.ts \
+	src/control/jsdialog/Util.ButtonType.ts \
 	src/control/jsdialog/Util.Dropdown.ts \
 	src/control/jsdialog/Util.Events.ts \
 	src/control/jsdialog/Util.KeyboardTabNavigation.ts \
